--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -23,7 +23,10 @@
         .container-card {
             padding: 0;
         }
-
+        -webkit-scrollbar{
+            width: 2px;
+            background: none;
+        }
     </style>
 </head>
 <body>
@@ -38,53 +41,20 @@
     <div class="Card">
         <div class="ProfileHeader-userCover">
             <div class="UserCoverEditor">
-                <div><label th:if="${session.user != null && session.user.getId() == user.getId()}"
-                            class="UploadPicture-wrapper" style="display:inline;">
-                    <input type="file" accept="image/png,image/jpeg" class="UploadPicture-input">
-                    <button type="button"
-                            class="Button UserCoverEditor-simpleEditButton DynamicColorButton DynamicColorButton--white">
-                        <svg viewBox="0 0 20 16" class="Icon Icon--camera Icon--left" width="14" height="16"
-                             aria-hidden="true" style="height: 16px; width: 14px;">
-                            <title></title>
-                            <g>
-                                <path
-                                        d="M18.094 2H15s-1-2-2-2H7C6 0 5 2 5 2H2C0 2 0 3.967 0 3.967V14c0 2 2.036 2 2.036 2H17c3 0 3-1.983 3-1.983V4c0-2-1.906-2-1.906-2zM10 12c-1.933 0-3.5-1.567-3.5-3.5S8.067 5 10 5s3.5 1.567 3.5 3.5S11.933 12 10 12zm0 1.5c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm7.5-8c-.552 0-1-.448-1-1s.448-1 1-1 1 .448 1 1-.448 1-1 1z"
-                                        fill-rule="evenodd"></path>
-                            </g>
-                        </svg>
-                        编辑封面图片
-                    </button>
-                </label>
+                <div>
                     <div class="UserCover"><img class="UserCover-image"
-                                                src="/image/101-desktop-wallpaper.png"
-                                                alt="用户封面"></div>
+                                                th:src="${user.getUserTopPhotoUrl()}" alt="用户封面"></div>
                 </div>
             </div>
         </div>
         <div class="ProfileHeader-wrapper">
             <div class="ProfileHeader-main">
 
-                <div class="UserAvatarEditor ProfileHeader-avatar" style="top: -25px;">
+                <div id="show-head" class="UserAvatarEditor ProfileHeader-avatar" style="top: -25px;">
                     <div class="UserAvatar" onmouseover="showAlterHead()" onmouseout="closeAlterHead()"><img
                             class="Avatar Avatar--large UserAvatar-inner" width="160" height="160"
-                            th:src="'/' + ${user.getHeadUrl()}">
+                            th:src="${user.getHeadUrl()}">
                     </div>
-                    <label th:if="${session.user != null && session.user.getId() == user.getId()}"
-                           class="UploadPicture-wrapper"><input type="file" accept="image/png,image/jpeg"
-                                                                class="UploadPicture-input">
-                        <div class="Mask UserAvatarEditor-mask Mask-hidden" id="alter-head">
-                            <div class="Mask-mask Mask-mask--black UserAvatarEditor-maskInner"></div>
-                            <div class="Mask-content">
-                                <svg class="Zi Zi--Camera UserAvatarEditor-cameraIcon"
-                                     fill="currentColor" viewBox="0 0 24 24" width="36" height="36">
-                                    <path
-                                            d="M20.094 6S22 6 22 8v10.017S22 20 19 20H4.036S2 20 2 18V7.967S2 6 4 6h3s1-2 2-2h6c1 0 2 2 2 2h3.094zM12 16a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7zm0 1.5a5 5 0 1 0-.001-10.001A5 5 0 0 0 12 17.5zm7.5-8a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
-                                            fill-rule="evenodd"></path>
-                                </svg>
-                                <div class="UserAvatarEditor-maskInnerText">修改我的头像</div>
-                            </div>
-                        </div>
-                    </label>
                 </div>
 
 
@@ -132,7 +102,16 @@
 
 
                                 <div class="ProfileHeader-detailItem"><span
-                                        class="ProfileHeader-detailLabel">个人简介</span>
+                                        class="ProfileHeader-detailLabel">个性签名</span>
+                                    <div class="ztext ProfileHeader-detailValue"
+                                         th:if="${user.getSimpleSelfIntroduction()==null}">该用户暂未填写
+                                    </div>
+                                    <div class="ProfileHeader-detailValue" th:if="${user.SimpleSelfIntroduction!=null}"
+                                         th:text="${user.getSimpleSelfIntroduction()}"></div>
+                                </div>
+
+                                <div class="ProfileHeader-detailItem"><span
+                                        class="ProfileHeader-detailLabel">简介</span>
                                     <div class="ztext ProfileHeader-detailValue"
                                          th:if="${user.getSelfIntroduction()==null}">该用户暂未填写
                                     </div>
@@ -149,9 +128,9 @@
                         </button>
                         <div class="ProfileButtonGroup ProfileHeader-buttons"
                              th:if="${session.user != null && session.user.getId() == user.getId()}">
-                            <button type="button"
+                            <a href="/setting"
                                     class="Button Button--blue">编辑个人资料
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -320,38 +299,12 @@
 </div>
 
 
+
+
 <!-- 页脚 -->
 <div th:insert="~{footer :: footer}"></div>
 
 <script src="/js/url.js" type="text/javascript"></script>
-<script>
-    var userDetail = false;
-    var showDetail = function () {
-        if (userDetail == false) {
-            $("#ProfileHeader-info").hide();
-            $("#ProfileHeader-detail").fadeIn();
-            document.getElementById("show-ProfileHeader-detail-btn").innerText = "收起详细资料";
-        } else {
-            $("#ProfileHeader-detail").fadeOut();
-            $("#ProfileHeader-info").show();
-            document.getElementById("show-ProfileHeader-detail-btn").innerText = "显示详细资料";
-        }
-        userDetail = !userDetail;
-    }
-
-    var showAlterHead = function () {
-        if (document.getElementById("alter-head") == null) {
-            return;
-        }
-        document.getElementById("alter-head").className = "Mask UserAvatarEditor-mask";
-    }
-
-    var closeAlterHead = function () {
-        if (document.getElementById("alter-head") == null) {
-            return;
-        }
-        document.getElementById("alter-head").className = "Mask UserAvatarEditor-mask Mask-hidden";
-    }
-</script>
+<script src="/js/user.js" type="text/javascript"></script>
 </body>
 </html>
