--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -23,7 +23,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mx-2">
                 <li class="nav-item active mx-2">
-                    <a class="nav-link" href="/" th:text="#{index.home}" id="link-hone-a" onclick="addLocaleUrl('link-hone-a')">主页<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/" th:text="#{index.home}" id="link-hone-a"
+                       onclick="addLocaleUrl('link-hone-a')">主页<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active mx-2">
                     <a class="nav-link" href="#" th:text="#{index.lebel}">分类<span class="sr-only">(current)</span></a>
@@ -34,9 +35,12 @@
 
                 <!-- 搜索 -->
                 <form class="form-inline my-2 my-lg-0 mx-2">
-                    <input class="form-control mr-sm-2" type="search" th:placeholder="#{index.search.placeholder}"
+                    <input class="form-control mr-sm-2" id="input-search" type="search" name="search"
+                           th:placeholder="#{index.search.placeholder}"
                            aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" th:text="#{index.search}">搜索</button>
+                    <button onclick="if($('#input-search').val() != ''){window.location.href='/search/'+$('#input-search').val()}" class="btn btn-outline-success my-2 my-sm-0" id="search-button"
+                            type="button" th:text="#{index.search}">搜索
+                    </button>
                 </form>
             </ul>
 
@@ -48,17 +52,20 @@
                         Language
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" id="zh-CN-a" th:href="@{/(l='zh-CN')}" onclick="addPageNumberForLanguage('zh-CN-a')">中文</a>
-                        <a class="dropdown-item" id="en-US-a" th:href="@{/(l='en-US')}" onclick="addPageNumberForLanguage('en-US-a')">English</a>
+                        <a class="dropdown-item" id="zh-CN-a" th:href="@{/(l='zh-CN')}"
+                           onclick="addPageNumberForLanguage('zh-CN-a')">中文</a>
+                        <a class="dropdown-item" id="en-US-a" th:href="@{/(l='en-US')}"
+                           onclick="addPageNumberForLanguage('en-US-a')">English</a>
                     </div>
                 </li>
 
                 <!-- 消息提醒待添加 -->
                 <li class="nav-item" th:if="${session.user != null}">
                     <a class="nav-link" th:href="${'/message/' + session.user.getUserId()}"
-                       >
+                    >
                         <img src="/image/icon/message.svg" width="28" height="28"/>
-                        [[#{index.message}]] <span class="badge badge-light" th:text="${session.notificationCount}">0</span>
+                        [[#{index.message}]] <span class="badge badge-light"
+                                                   th:text="${session.notificationCount}">0</span>
                     </a>
                 </li>
 
@@ -83,11 +90,13 @@
                 <li class="nav-item dropdown" th:if="${session.user != null}">
                     <a class="nav-link dropdown-toggle" href="#"
                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img th:src="${session.user.getHeadUrl()}" width="30" height="30" class="d-inline-block align-top" alt="">
+                        <img th:src="${session.user.getHeadUrl()}" width="30" height="30"
+                             class="d-inline-block align-top" alt="">
                         [[${session.user.getUserName()}]]
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" th:href="'/user/' + ${session.user.getUserId()}" th:text="#{index.myhome}">我的主页</a>
+                        <a class="dropdown-item" th:href="'/user/' + ${session.user.getUserId()}"
+                           th:text="#{index.myhome}">我的主页</a>
                         <a class="dropdown-item" href="/setting" th:text="#{index.setting}">设置</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/sign-out" id="sign-out-a" onclick="signOut('sign-out-a')"
@@ -116,6 +125,7 @@
         </div>
     </nav>
 </div>
+
 
 </body>
 </html>
