--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -274,7 +274,7 @@
                     $("#error-message").show();
                 }  else {
                     alert("注册成功，即将为你跳转到首页！");
-                    window.location.reload("/");
+                    window.location.replace("/");
                 }
             }
         });
