--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,9 +22,12 @@
             border-right-width: 1px;
             border-right-color: #efefef;
         }
+        a:hover {
+            text-decoration: none;
+        }
     </style>
     <script type="text/javascript">
-        if(window.localStorage.getItem("closable") === "true") {
+        if (window.localStorage.getItem("closable") === "true") {
             window.localStorage.removeItem("closable");
             window.close();
         }
@@ -54,16 +57,16 @@
                     <div class="col-7">
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">最新</a>
+                                <a class="nav-link active" id="new-nav" href="/">最新</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">推荐</a>
+                                <a class="nav-link" href="#" onclick="alert('正在施工中！！！')">推荐</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">热门</a>
+                                <a class="nav-link" href="#" onclick="alert('没错还在施工中！！！')">热门</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" style="color: red;">消灭零回复</a>
+                                <a class="nav-link" id="no-nav" href="/?sort=no" style="color: red;">消灭零回复</a>
                             </li>
                         </ul>
                     </div>
@@ -77,18 +80,23 @@
                          src="image/head/boyhead.png"
                          style="max-width: 64px; height: auto; ">
                     <div class="media-body">
-                        <h5 class="mt-0"><a class="link-to-text" target="_blank" th:href="'/question/' + ${question.getQuestionId()}" th:text="${question.title}">中间对齐</a></h5>
+                        <h5 class="mt-0"><a class="link-to-text" target="_blank"
+                                            th:href="'/question/' + ${question.getQuestionId()}"
+                                            th:text="${question.title}">中间对齐</a></h5>
                         <!-- TODO 等待添加摘要 -->
                         <!--<p class="mb-1">Cras sit amet nibh libero</p>-->
 
                         <p class="mb-0 small">
-                            <a class="issuse-question-class" target="_blank" href="#" th:text="${question.classification}">分类</a>
-                            <a class="issuse-question-people" target="_blank" th:href="'/user/'+ ${question.user.getUserId()}" th:text="${question.user.userName}">人名</a>
+                            <a class="issuse-question-class" target="_blank" href="#"
+                               th:text="${question.classification}">分类</a>
+                            <a class="issuse-question-people" target="_blank"
+                               th:href="'/user/'+ ${question.user.getUserId()}"
+                               th:text="${question.user.userName}">人名</a>
                             <span class="issuse-question-span">是作者
                                 •<span th:text="${question.likeCount}">人数</span><span>人关注</span>
                                 •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
                                 •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
-                                •<span th:text="${question.alterTime}">人数</span><span>时间</span>
+                                •<span>最新回复时间：</span><span th:text="${question.alterTime}">人数</span>
                             </span>
                         </p>
                     </div>
@@ -101,41 +109,44 @@
                 <ul class="pagination justify-content-end">
                     <!-- 返回首页 -->
                     <li class="page-item" th:if="${paginationDto.showFirstPage}">
-                        <a class="page-link" id="first-page-a" href="/" aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
+                        <a class="page-link" id="first-page-a" th:href="@{/(page=1,tag=${tag},sort=${sort})}" aria-label="Previous"
+                           onclick="addLocaleUrlForPage('first-page-a')">
                             <span aria-hidden="true">&laquo;&laquo;</span>
                             <span class="sr-only">Previous</span>
                         </a>
                     </li>
                     <!-- 上一页 -->
                     <li class="page-item" th:if="${paginationDto.showPrevious}">
-                        <a class="page-link" id="link-to-last-a" th:href='@{/(page=${paginationDto.nowPage} - 1)}' aria-label="Previous"
-                        onclick="addLocaleUrlForPage('link-to-last-a')">
+                        <a class="page-link" id="link-to-last-a" th:href="@{/(page=${paginationDto.nowPage - 1},tag=${tag},sort=${sort})}"
+                           aria-label="Previous"
+                           onclick="addLocaleUrlForPage('link-to-last-a')">
                             <span aria-hidden="true">&laquo;</span>
                             <span class="sr-only">Previous</span>
                         </a>
                     </li>
 
 
-                    <li class="page-item" th:each="page : ${paginationDto.pages}" th:class="${paginationDto.nowPage == page}? 'page-item active' : 'page-item'">
-                        <a class="page-link" th:href="@{/(page=${page})}" th:text="${page}" th:id="${page}"
+                    <li class="page-item" th:each="page : ${paginationDto.pages}"
+                        th:class="${paginationDto.nowPage == page}? 'page-item active' : 'page-item'">
+                        <a class="page-link" th:href="@{/(page=${page},tag=${tag},sort=${sort})}" th:text="${page}" th:id="${page}"
                            th:onclick="'javascript:addLocaleUrlForPage(\''+${page}+'\')'">
                             1
                         </a>
                     </li>
 
 
-
                     <!-- 下一页 -->
                     <li class="page-item" th:if="${paginationDto.showNext}">
-                        <a class="page-link" id="lind-to-next-a" th:href='@{/(page=${paginationDto.nowPage} + 1)}' aria-label="Next"
-                            onclick="addLocaleUrlForPage('lind-to-next-a')">
+                        <a class="page-link" id="lind-to-next-a" th:href="@{/(page=${paginationDto.nowPage +1 },tag=${tag},sort=${sort})}"
+                           aria-label="Next"
+                           onclick="addLocaleUrlForPage('lind-to-next-a')">
                             <span aria-hidden="true">&raquo;</span>
                             <span class="sr-only">Next</span>
                         </a>
                     </li>
                     <!-- 最后一页 -->
                     <li class="page-item" th:if="${paginationDto.showEndPage}">
-                        <a class="page-link" id="link-to-end-a" th:href='@{/(page=${paginationDto.totalPage})}' th:if="${paginationDto.showEndPage}"
+                        <a class="page-link" id="link-to-end-a" th:if="${paginationDto.showEndPage}" th:href="@{/(page=${pagination.totalPage},tag=${tag},sort=${sort})}"
                            aria-label="Next" onclick="addLocaleUrlForPage('link-to-end-a')">
                             <span aria-hidden="true">&raquo;&raquo;</span>
                             <span class="sr-only">Next</span>
@@ -148,6 +159,50 @@
         <!-- 右边 -->
         <div class="col">
             <br/>
+            <p>
+                广告位招租
+            </p>
+            <!-- 图片轮播 -->
+            <div id="Advertisement" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href=""><img class="d-block w-100" src="/image/101-desktop-wallpaper.png"
+                                        alt="First slide"></a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href=""><img class="d-block w-100" src="/image/101-desktop-wallpaper.png"
+                                        alt="Second slide"></a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href=""><img class="d-block w-100" src="/image/101-desktop-wallpaper.png"
+                                        alt="Third slide"></a>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <br/>
+            <h5 class="mb-2">热门话题</h5>
+
+            <div class="content" th:each="tag : ${hots}">
+                <a th:href="@{/(page=1,tag=${tag},sort=${sort})}" >
+                    <p class="mt-2" th:text="${tag}"></p>
+                </a>
+            </div>
+
+
+            <br/><br/>
             <p><a class="link-to-text" href="#"><span style="color: red">New!</span>&nbsp;新闻</a></p>
             <!-- 图片轮播 -->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -179,26 +234,6 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <br/>
-            <h5>热门话题</h5>
-
-            <small class="text-muted">•<span style="font-weight: bold;">问题标题：</span>请用<span
-                    style="color: red; font-weight: bold;">精简</span>的语言描述您发布的问题，不超过25字。
-            </small>
-            <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">问题补充：</span>详细补充您的问题内容，并确保问题描述清晰直观,
-                并提供一些相关的资料。
-            </small>
-            <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">选择标签：</span>选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字。
-            </small>
-            <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">最后：</span>友善发帖，灌水闲聊请选灌水分类。</small>
-            <br/><br/>
-            <br/><br/>
-            <div class="container" style="">
-                广告位招租
-            </div>
         </div>
     </div>
     <div class="container" style="height: 30px">
@@ -208,7 +243,11 @@
 
 <!-- 页脚 -->
 <div th:insert="~{footer :: footer}"></div>
-
+<script>
+    function addBottom() {
+        document.getElementById("new-nav").style.
+    }
+</script>
 
 <script src="/js/url.js" type="text/javascript"></script>
 </body>
